salesforce/force-app/main/default/objects/Portfolio_Member__c/Portfolio_Member__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Contacts to Marketer Portfolios. A Contact can belong to multiple portfolios (e.g., regional + VIP).</description>
    <label>Portfolio Member</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>