salesforce/force-app/main/default/objects/Portfolio_Member__c/fields/Assignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Reason__c</fullName>
    <description>Why this contact was assigned to this portfolio</description>
    <label>Assignment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Region Match</fullName>
            </value>
            <value>
                <fullName>Loyalty Tier</fullName>
            </value>
            <value>
                <fullName>Event Specialty</fullName>
            </value>
            <value>
                <fullName>VIP Status</fullName>
            </value>
            <value>
                <fullName>Manual Assignment</fullName>
            </value>
            <value>
                <fullName>Workload Balancing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>