salesforce/force-app/main/default/objects/Portfolio_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact assigned to this portfolio</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portfolio Memberships</relationshipLabel>
    <relationshipName>Portfolio_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>