salesforce/force-app/main/default/objects/Portfolio_Member__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this is the primary portfolio for this contact</description>
    <label>Primary Portfolio</label>
    <type>Checkbox</type>
</CustomField>