salesforce/force-app/main/default/objects/Portfolio_Member__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <description>The portfolio this contact belongs to</description>
    <label>Portfolio</label>
    <referenceTo>Marketer_Portfolio__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>